--- a/test/index.html
+++ b/test/index.html
@@ -4,7 +4,10 @@
   <title>JavaScript Bundle Example</title>
 </head>
 <body>
-    <button onclick="console.log(window)">click</button>
+    <button onclick="">click</button>
   <script src="../dist/bundle.js"></script>
+  <script type="JavaScript">
+
+  </script>
 </body>
 </html>
